validate: 2026-02-06-collect-application-server-metrics-tomcat-jetty-wildfly-collector